--- a/README.ipynb
+++ b/README.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "\n",
     "### Interfaccia Web\n",
-    "Per rendere facilmente accessibili e utilizzabili i modelli, è stata creata un'interfaccia interattiva tramite Streamlit. L'utente può scegliere quale modello utilizzare e inserire le informazioni richieste (ad esempio, se si sceglie il primo modello vanno inserite latitudine e longitudine per poter ottenere la stima richiesta). Una volta inseriti i dati, viene restituita la stima del prezzo della casa in base al modello selezionato. Si ricorda che il primo modello è stato addestrato in una particolare zona geografica dunque verrà chiesto all'utente di selezionare una casa ubicata correttamente (vi sono range spacifici sia per la latitudine che per la longitudine).\n",
+    "Per rendere facilmente accessibili e utilizzabili i modelli, è stata creata un'interfaccia interattiva tramite Streamlit. L'utente può scegliere quale modello utilizzare e inserire le informazioni richieste (ad esempio, se si sceglie il primo modello vanno inserite latitudine e longitudine per poter ottenere la stima richiesta). Una volta inseriti i dati, viene restituita la stima del prezzo della casa in base al modello selezionato.Si ricorda che il primo modello è stato addestrato in una specifica zona geografica, quindi verrà chiesto all'utente di selezionare una casa situata correttamente, rispettando gli intervalli definiti per latitudine e longitudine.\n",
     "\n",
     "### Tableau\n",
     "Attraverso il seguente link è possibile accedere a una mappa interattiva che mostra i prezzi originali presenti nel dataset. Le istanze sono colorate con una sfumatura di blu proporzionale al prezzo della casa.\n",
